--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.3'
     //launcher
     implementation 'androidx.core:core-ktx:1.6.0-alpha03'
-
+    implementation "androidx.fragment:fragment:1.3.3"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
