--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
@@ -41,7 +41,9 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.3'
     //launcher
     implementation 'androidx.core:core-ktx:1.6.0-alpha03'
-    implementation "androidx.fragment:fragment:1.3.3"
+    implementation "androidx.fragment:fragment:1.3.4"
+
+
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
@@ -49,4 +51,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+        implementation 'com.tbuonomo:dotsindicator:4.2'
+
+
+
+
 }
