--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.activity:activity-ktx:1.3.0-alpha07'
-    implementation 'androidx.fragment:fragment-ktx:1.3.3'
+    implementation 'androidx.activity:activity-ktx:1.3.0-alpha08'
+    implementation 'androidx.fragment:fragment-ktx:1.3.4'
     //launcher
-    implementation 'androidx.core:core-ktx:1.6.0-alpha03'
+    implementation 'androidx.core:core-ktx:1.6.0-beta01'
     implementation "androidx.fragment:fragment:1.3.4"
-
+//glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
@@ -51,6 +53,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
         implementation 'com.tbuonomo:dotsindicator:4.2'
 
 
